--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,42 @@
   <body>
     <div class="wrapper">
       @@include('html/partials/_header.htm',{})
-      <main class="page">My site</main>
+
+      <main class="page">
+        <section class="hero">
+
+        </section>
+
+        <section class="services">
+          <div class="services__container">
+            <span class="pre-title services__pre-title">services</span>
+            <h2 class="sec-heading  services__heading">Services We Offer</h2>
+            <p class="subtitle services__subtitle">Lorem Ipsum Dolor Sit Amet Consectetur Adipisicing Elit Omnis</p>
+
+            <div class="services__block">
+
+              <div class="services__item">
+                <div class="services__icon">
+                  <img src="@img" alt="">
+                </div>
+                <div class="services__content">
+                  <h3 class="services__title"></h3>
+                  <p class="services__text"></p>
+                </div>
+                <a href="#" class="read-more services__read-more">
+                  read more
+                  <span>
+
+                  </span>
+                </a>
+              </div>
+
+            </div>
+
+          </div>
+        </section>
+      </main>
+
       @@include('html/partials/_footer.htm',{})
     </div>
     @@include('html/base/_js.htm',{})
